macros/tests/sig4-fail.rs
struct Embedded {
    //
}

impl Embedded {
    #[macros::entry]
    fn e_main(&self, table: ()) {}
}

fn main() {}
